--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       }
     </style>
   </head>
+  <script>
+    onReady(function () { 
+      TimerApp('timer') 
+    });
+  </script>
   <body>
     <div id="timer">
       <table class="task_list table table-striped">
